# ani-link

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  ani-link.desktop
.github/workflows/: rust.yml
src/: animeav1scraper.rs  animeflvscraper.rs  app.rs  cached_image.rs  config.rs  download.rs  episodes.rs  episodes_page.rs  image_query_state.rs  lib.rs  list_query_state.rs  main.rs  main_menu.rs  main_menu_page.rs  main_menu_selection.rs  menu_state.rs  options.rs  options_page.rs  page.rs  popup.rs  presets.rs  scraper.rs  search.rs  search_page.rs  themes.rs
src/gui/: episodes.rs  main_menu.rs  mod.rs  options.rs  search.rs
src/main_menu/: mod.rs  options.rs  search.rs
src/scraper/: anime.rs  animeav1scraper.rs  animeflvscraper.rs  mod.rs
