[package]
name = "ani-link"
version = "0.4.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
colors-transform = "0.2.11"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
iced = { version = "0.13.1", features = ["image", "advanced"] }
image = "0.25.9"
itertools = "0.14.0"
lru = "0.16.3"
notify-rust = "4.12.0"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["cookies", "blocking"] }
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
time = "0.3.47"
toml = "1.0.3"
