[package]
name = "ani-link"
version = "0.4.1"
edition = "2024"
license = "MIT"
description = "A scraper I created just for fun."
repository = "https://github.com/adriannic/ani-link"
categories = []
keywords = ["anime"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
colors-transform = "0.2.11"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml"] }
iced = { version = "0.13.1", features = ["image", "advanced", "tokio"] }
image = "0.25.9"
itertools = "0.14.0"
notify-rust = "4.12.0"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.12.28", features = ["cookies", "blocking"] }
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.3"
