[package]
name = "ani-link"
version = "0.4.4"
edition = "2024"
license = "MIT"
description = "A scraper I created just for fun."
repository = "https://github.com/adriannic/ani-link"
categories = []
keywords = ["anime"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
nursery = "warn"

[target.'x86_64-pc-windows-gnu'.dependencies]
libmpv2 = { version = "6.0.0", features = ["build_libmpv"] }

[dependencies]
bytes = "1.12.0"
colors-transform = "0.2.11"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml"] }
iced = { version = "0.14.0", features = ["image", "advanced", "tokio"] }
image = "0.25.10"
itertools = "0.15.0"
libmpv2 = "6.0.0"
notify-rust = "4.18.0"
rayon = "1.12.0"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["cookies", "blocking"] }
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
time = "0.3.51"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
